[metadata]
name = pyfred-cli
version = 0.1.5
author = Björn Marschollek
project_urls=
    Source Code = https://github.com/muffix/pyfred-cli
    Documentation = https://muffix.github.io/pyfred-cli
description = Python helpers to build Alfred workflows
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Console
    Operating System :: MacOS
    Intended Audience :: Developers
[options]
packages = pyfred
package_dir =
    = .
install_requires = file:requirements.txt

[options.extras_require]
doc = file:requirements-doc.txt
test = file:requirements-test.txt


[options.entry_points]
console_scripts =
    pyfred = pyfred.cli:_cli

[options.packages.find]
exclude =
    pyfred.tests*

[options.package_data]
pyfred =
    template/.*
    template/**
